--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>My Assistant</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="main.js"></script></head>
-  <body>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>My To-Do Assistant</title><script defer="defer" src="main.js"></script></head><body><header><div class="lower-tab"><p class="title">My_To_Do_Assistant</p></div><div class="upper-tab"><p class="clock"></p></div></header><div id="content"><div class="home-projects portal">Projects Hub</div></div></body></html>
